<resources>
    <string name="app_name">audioDetectionAPP
    </string>
    <string name="start">ggwp</string>
    <string name="stop">Stop</string>
    <string name="volume_50">Volume : 50 %</string>
    <string name="record">Record</string>
    <string name="choose">Choose</string>
    <string name="get">Get</string>
    <string name="get_response">Get Response</string>
    <string name="動畫">動畫</string>
    <string name="connect_status">連線狀態：</string>
    <string name="contentDescription_Stop">停止播放</string>
    <string name="contentDescription_StartAndPause">播放與暫停</string>
    <string name="contentDescription_Choose">選擇資料</string>
</resources>
